@@ -112,6 +112,9 @@ Unreleased
   profile for associating with events generated by the system, usually when
   bootstrapping a new Karl.
 
+- Exclude objects which don't provide IContent from 'texts' catalog index.
+  (Only content objects should show up in search.)
+
 3.15 (2009-12-14)
 -----------------
 
